--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "12.12.6",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/styled-components": "^4.1.21",
+    "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "styled-components": "^5.0.0-rc.1",
     "typescript": "3.7.2"
   },
   "scripts": {
@@ -20,6 +23,10 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
   },
   "browserslist": {
     "production": [
