--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@types/jest": "24.0.22",
     "@types/node": "12.12.6",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.1.21",
     "polished": "^3.4.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^0.0.0-experimental-f6b8d31a7",
+    "react-dom": "^0.0.0-experimental-f6b8d31a7",
     "react-scripts": "3.2.0",
     "styled-components": "^5.0.0-rc.1",
     "typescript": "3.7.2"
